--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,15 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation 'com.google.firebase:firebase-firestore:23.0.1'
+    implementation "androidx.recyclerview:recyclerview:1.2.0"
+    implementation files('/home/jaime/AndroidStudioProjects/recyclerview-swipedecorator-1.2.3.aar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
 }
